--- a/package.json
+++ b/package.json
@@ -64,13 +64,18 @@
     "webpack-cli": "^5.0.0"
   },
   "dependencies": {
-    "@babel/traverse":"7.18.10",
     "@babel/core": "7.18.10",
     "@babel/generator": "7.18.10",
     "@babel/plugin-proposal-optional-chaining": "^7.20.7",
+    "@babel/plugin-transform-typescript": "^7.20.13",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@babel/traverse": "7.18.10",
     "@types/babel__core": "^7.1.20",
-    "prettier": "^2.8.1"
+    "@types/require-from-string": "^1.2.1",
+    "babel-plugin-jsx": "^1.2.0",
+    "prettier": "^2.8.3",
+    "require-from-string": "^2.0.2",
+    "typescript-eslint-parser": "^22.0.0"
   }
 }
