--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 	"compilerOptions": {
 		"module": "commonjs",
 		"target": "ES2020",
+        "esModuleInterop": true,
 		"lib": [
 			"ES2020"
 		],
